WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306809
REGRESSION(
305120@main
): Fix colspan width distribution when auto columns are converted to percentages
https://bugs.webkit.org/show_bug.cgi?id=306809
Summary
REGRESSION(305120@main): Fix colspan width distribution when auto columns are...
Ahmad Saleem
Reported
2026-02-02 14:50:35 PST
rdar://168546944
Attachments
Add attachment
proposed patch, testcase, etc.
Ahmad Saleem
Comment 1
2026-02-02 14:50:48 PST
rdar://168546944
Ahmad Saleem
Comment 2
2026-02-02 15:10:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57729
EWS
Comment 3
2026-02-04 08:05:17 PST
Committed
306780@main
(ce01b79ed142): <
https://commits.webkit.org/306780@main
> Reviewed commits have been landed. Closing PR #57729 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug