Cherry-pick ce01b79ed142. rdar://169658003

REGRESSION(305120@main): Fix colspan width distribution when auto columns are converted to percentages
    https://bugs.webkit.org/show_bug.cgi?id=306809
    rdar://168546944

    Reviewed by Alan Baradlay.

    When a percentage-width colspan cell spans columns that include both
    percentage and auto-width columns, the earlier code converts auto columns
    to effective percentages to ensure proper distribution. However, a
    subsequent non-percentage colspan over the same columns was incorrectly
    applying percentage-based distribution even though no conversion had
    occurred for that cell.

    This caused regressions where auto columns were treated as if they had
    been converted to percentages, leading to incorrect width calculations.

    The fix adds a check to verify that auto columns have actually been
    converted to effective percentages before applying percentage-based
    distribution. This is done by checking if any column has logicalWidth
    set to auto but effectiveLogicalWidth set to a percentage value, which
    only happens when a previous percentage colspan has processed these
    columns.

    * Source/WebCore/rendering/AutoTableLayout.cpp:
    (WebCore::AutoTableLayout::calcEffectiveLogicalWidth):
    * LayoutTests/fast/table/colspan-width-distribution-auto-percent-expected.txt: Added.
    * LayoutTests/fast/table/colspan-width-distribution-auto-percent.html: Added.

    Canonical link: https://commits.webkit.org/306780@main

Identifier: 305413.252@safari-7624-branch